tests/src/frontend/expand/invalid/macro_duplicate2.sk
class C(x: Int) {
  macro fun m(): void {
    #forEachField (#field) {
      #forEachField (#field) {
        #field
      }
    }
  }
}

fun main(): void {
  void
}
